--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
         <div class="left ">
             <div class="home bg-grey rounded font-spotify">
                 <div class="logo">
-                    <img src="/SVGs/logo.svg" alt="logo" class="invert">
-                    <img src="/SVGs/cross.svg" alt="cross" class="invert  cross">
+                    <img src="./SVGs/logo.svg" alt="logo" class="invert">
+                    <img src="./SVGs/cross.svg" alt="cross" class="invert  cross">
                 </div>
                 <ul>
-                    <li><img src="/SVGs/home.svg" alt="home" class="invert">Home</li>
-                    <li><img src="/SVGs/search.svg" alt="search" class="invert">Search</li>
+                    <li><img src="./SVGs/home.svg" alt="home" class="invert">Home</li>
+                    <li><img src="./SVGs/search.svg" alt="search" class="invert">Search</li>
                 </ul>
             </div>
             <div class="library bg-grey rounded m-1 p-1 font-spotify">
                 <div class="heading">
-                    <img src="/SVGs/playlist.svg" alt="playlist" class="invert">
+                    <img src="./SVGs/playlist.svg" alt="playlist" class="invert">
                     <h2>
                         Your library
                     </h2>
@@ -70,10 +70,10 @@
             <div class="header m-1 rounded">
                 <div class="nav">
                     <div class="hamburgerContainer">
-                        <img src="/SVGs/hamburger.svg" alt="" class="invert hamburger">   
+                        <img src="./SVGs/hamburger.svg" alt="" class="invert hamburger">   
 
-                        <img src="/SVGs/lbutton.svg" alt="Left Button" class="invert">
-                        <img src="/SVGs/rbutton.svg" alt="Right Button" class="invert">
+                        <img src="./SVGs/lbutton.svg" alt="Left Button" class="invert">
+                        <img src="./SVGs/rbutton.svg" alt="Right Button" class="invert">
                     </div>
                     
 
@@ -101,9 +101,9 @@
                     </div>
 
                     <div class="songButtons flex">
-                        <img src="/SVGs/prevSong.svg" alt="" id="previous">
-                        <img src="/SVGs/playsong.svg" alt="" id="play">
-                        <img src="/SVGs/nextSong.svg" alt="" id="next">
+                        <img src="./SVGs/prevSong.svg" alt="" id="previous">
+                        <img src="./SVGs/playsong.svg" alt="" id="play">
+                        <img src="./SVGs/nextSong.svg" alt="" id="next">
                     </div>
                     <div class="misDetails">
                         <div class="songTime">00:00 / 00:00</div>
