--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="icon" type="image/png" sizes="16x16"
         href="https://open.spotifycdn.com/cdn/images/favicon16.1c487bff.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="CSS/utility.css">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/utility.css">
     <link rel="manifest" href="site.webmanifest">
 
     <style>
@@ -27,8 +27,8 @@
         <div class="left ">
             <div class="home bg-grey rounded font-spotify">
                 <div class="logo">
-                    <img src="/SVGs/logo.svg" alt="logo" class="invert">
-                    <img src="/SVGs/cross.svg" alt="cross" class="invert  cross">
+                    <img src="./SVGs/logo.svg" alt="logo" class="invert">
+                    <img src="./SVGs/cross.svg" alt="cross" class="invert  cross">
                 </div>
                 <ul>
                     <li><img src="/SVGs/home.svg" alt="home" class="invert">Home</li>
