--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                     <img src="./SVGs/cross.svg" alt="cross" class="invert  cross">
                 </div>
                 <ul>
-                    <li><img src="/SVGs/home.svg" alt="home" class="invert">Home</li>
-                    <li><img src="/SVGs/search.svg" alt="search" class="invert">Search</li>
+                    <li><img src="./SVGs/home.svg" alt="home" class="invert">Home</li>
+                    <li><img src="./SVGs/search.svg" alt="search" class="invert">Search</li>
                 </ul>
             </div>
             <div class="library bg-grey rounded m-1 p-1 font-spotify">
                 <div class="heading">
-                    <img src="/SVGs/playlist.svg" alt="playlist" class="invert">
+                    <img src="./SVGs/playlist.svg" alt="playlist" class="invert">
                     <h2>
                         Your library
                     </h2>
@@ -70,10 +70,10 @@
             <div class="header m-1 rounded">
                 <div class="nav">
                     <div class="hamburgerContainer">
-                        <img src="/SVGs/hamburger.svg" alt="" class="invert hamburger">   
+                        <img src="./SVGs/hamburger.svg" alt="" class="invert hamburger">   
 
-                        <img src="/SVGs/lbutton.svg" alt="Left Button" class="invert">
-                        <img src="/SVGs/rbutton.svg" alt="Right Button" class="invert">
+                        <img src="./SVGs/lbutton.svg" alt="Left Button" class="invert">
+                        <img src="./SVGs/rbutton.svg" alt="Right Button" class="invert">
                     </div>
                     
 
@@ -101,14 +101,14 @@
                     </div>
 
                     <div class="songButtons flex">
-                        <img src="/SVGs/prevSong.svg" alt="" id="previous">
-                        <img src="/SVGs/playsong.svg" alt="" id="play">
-                        <img src="/SVGs/nextSong.svg" alt="" id="next">
+                        <img src="./SVGs/prevSong.svg" alt="" id="previous">
+                        <img src="./SVGs/playsong.svg" alt="" id="play">
+                        <img src="./SVGs/nextSong.svg" alt="" id="next">
                     </div>
                     <div class="misDetails">
                         <div class="songTime">00:00 / 00:00</div>
                         <div class="volume">
-                            <img src="SVGs/volume.svg" alt="" id="volButton">
+                            <img src="./SVGs/volume.svg" alt="" id="volButton">
                             <div class="range"> 
                                 <input type="range" name="volume" id="" style="width: 75px;">
                             </div>
@@ -122,7 +122,7 @@
 
         </div>
     </div>
-    <script src="/js/script.js">
+    <script src="./js/script.js">
 
     </script>
 </body>
